fix: change height units from svh to dvh to address layout issues

--- a/src/layout/layoutWithSideBar/sidebar/scss/sidebar.scss
+++ b/src/layout/layoutWithSideBar/sidebar/scss/sidebar.scss
@@ -17,7 +17,7 @@ aside {
   width: calc(3rem + 32px);
   overflow: hidden;
   height: 100vh;
-  height: 100svh;
+  height: 100dvh;
   padding: 1rem;
 
   position: fixed;
